@@ -1,12 +1,12 @@
 /* cmds.c -- Texinfo commands.
-   $Id: cmds.c,v 1.71 2007-06-20 20:05:42 karl Exp $
+   $Id: cmds.c,v 1.72 2007-07-01 18:31:41 karl Exp $
 
    Copyright (C) 1998, 1999, 2000, 2001, 2002, 2003, 2004, 2005, 2006, 2007
    Free Software Foundation, Inc.
 
    This program is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
-   the Free Software Foundation; either version 2, or (at your option)
+   the Free Software Foundation; either version 3, or (at your option)
    any later version.
 
    This program is distributed in the hope that it will be useful,
@@ -1450,9 +1450,6 @@ cm_sp (void)
 
           /* close_paragraph generates an extra blank line.  */
           close_single_paragraph ();
-
-          if (lines && html && !executing_string)
-            html_output_head ();
 
           if (html)
             add_html_block_elt ("<pre class=\"sp\">\n");
