@@ -1,12 +1,12 @@
 /* defun.c -- @defun and friends.
-   $Id: defun.c,v 1.15 2006-05-30 00:51:28 karl Exp $
+   $Id: defun.c,v 1.16 2007-07-01 18:31:41 karl Exp $
 
-   Copyright (C) 1998, 1999, 2000, 2001, 2002, 2003, 2004, 2005
+   Copyright (C) 1998, 1999, 2000, 2001, 2002, 2003, 2004, 2005, 2007
    Free Software Foundation, Inc.
 
    This program is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
-   the Free Software Foundation; either version 2, or (at your option)
+   the Free Software Foundation; either version 3, or (at your option)
    any later version.
 
    This program is distributed in the hope that it will be useful,
