@@ -1,12 +1,12 @@
 /* footnote.h -- declarations for footnote.c.
-   $Id: footnote.h,v 1.3 2005-05-15 00:00:07 karl Exp $
+   $Id: footnote.h,v 1.4 2007-07-01 18:31:42 karl Exp $
 
-   Copyright (C) 1998, 1999, 2000, 2001, 2002, 2003, 2004 Free Software
+   Copyright (C) 1998, 1999, 2000, 2001, 2002, 2003, 2004, 2007 Free Software
    Foundation, Inc.
 
    This program is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
-   the Free Software Foundation; either version 2, or (at your option)
+   the Free Software Foundation; either version 3, or (at your option)
    any later version.
 
    This program is distributed in the hope that it will be useful,
