@@ -1,12 +1,12 @@
 /* index.c -- indexing for Texinfo.
-   $Id: index.c,v 1.22 2007-02-07 17:00:38 karl Exp $
+   $Id: index.c,v 1.23 2007-07-01 18:31:42 karl Exp $
 
-   Copyright (C) 1998, 1999, 2002, 2003, 2004 Free Software Foundation,
+   Copyright (C) 1998, 1999, 2002, 2003, 2004, 2007 Free Software Foundation,
    Inc.
 
    This program is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
-   the Free Software Foundation; either version 2, or (at your option)
+   the Free Software Foundation; either version 3, or (at your option)
    any later version.
 
    This program is distributed in the hope that it will be useful,
