@@ -1,12 +1,12 @@
 /* lang.h -- declarations for language codes etc.
-   $Id: lang.h,v 1.11 2007-06-17 23:12:00 karl Exp $
+   $Id: lang.h,v 1.12 2007-07-01 18:31:43 karl Exp $
 
    Copyright (C) 1999, 2001, 2002, 2003, 2006, 2007 Free Software
    Foundation, Inc.
 
    This program is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
-   the Free Software Foundation; either version 2, or (at your option)
+   the Free Software Foundation; either version 3, or (at your option)
    any later version.
 
    This program is distributed in the hope that it will be useful,
